--- a/flask/docker-compose.yml
+++ b/flask/docker-compose.yml
@@ -1,28 +1,16 @@
-version: '2'
+version: '2.1'
  
 services:
   web:
     restart: always
-    build: ./web
-    expose:
-      - "8000"
+    build: ./app
+    ports:
+      - 5000:5000
     volumes:
-      - /usr/src/app/web/project/static
-    command: /usr/local/bin/gunicorn -w 2 -b :8000 project:app
+      - .:/app
+    command: flask run --host=0.0.0.0
     depends_on:
       - postgres
- 
-  nginx:
-    restart: always
-    build: ./nginx
-    ports:
-      - "80:80"
-    volumes:
-      - /www/static
-    volumes_from:
-      - web
-    depends_on:
-      - web
  
   data:
     image: postgres:9.6
@@ -33,6 +21,10 @@ services:
   postgres:
     restart: always
     build: ./postgresql
+    environment:
+      - POSTGRES_USER=${POSTGRES_USER}
+      - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
+      - POSTGRES_DB=${POSTGRES_DB}
     volumes_from:
       - data
     expose:
